session-21-final-devops-project/final-devops-project/troubleshooting/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final-ts
  labels: {purpose: troubleshooting-challenge, owner: vansh-dobhal-10099}
